syntax = "proto3";

package characters;

option go_package="github.com/AranGarcia/droop/characters/internal/gen/proto";

service API {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Retrieve(RetrieveRequest) returns (RetrieveResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message CreateRequest {
    int32 level = 1;
    string name = 2;
    int32 health_points = 3;
    int32 armor_class = 4;
    int32 strength = 5;
    int32 dexterity = 6;
    int32 constitution = 7;
    int32 intelligence = 8;
    int32 wisdom = 9;
    int32 charisma = 10;
}

message CreateResponse {
    Character character = 1;
}

message RetrieveRequest {
    string id = 1;
}

message RetrieveResponse {
    Character character = 1;
}

message UpdateRequest {
    optional int32 level = 1;
    optional string name = 2;
    optional int32 health_points = 3;
    optional int32 armor_class = 4;
    optional int32 strength = 5;
    optional int32 dexterity = 6;
    optional int32 constitution = 7;
    optional int32 intelligence = 8;
    optional int32 wisdom = 9;
    optional int32 charisma = 10;
}

message UpdateResponse {
    Character character = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {}

message Character {
    string id = 1;
    int32 level = 2;
    int32 name = 3;
    int32 health_points = 4;
    int32 armor_class = 5;
    int32 strength = 6;
    int32 dexterity = 7;
    int32 constitution = 8; 
    int32 intelligence = 9;
    int32 wisdom = 10;
    int32 charisma = 11;
}